fix: update gap in navigation SCSS for better layout consistency

--- a/src/widgets/header-desktop/Navigation/Navigation.module.scss
+++ b/src/widgets/header-desktop/Navigation/Navigation.module.scss
@@ -21,7 +21,7 @@
 
   & > ul {
     display: flex;
-    gap: vw-1440(20);
+    gap: vw-1440(32);
     align-items: center;
     list-style: none;
     height: 100%;
